# llm-experiments

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
guardrails/basic-guardrails/: basic_guardrails.py  simulated_conversation.py
guardrails/basic-guardrails/config/: config.yml  prompts.yml  rails.co
tracing/: basic_tracing.py
