[project]
name = "llm-experiments"
version = "0.1.0"
description = ""
authors = [
    {name = "andymc629",email = "andrewpmcmahon629@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "nemoguardrails (>=0.11.0,<0.12.0)",
    "openai (>=1.59.6,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "jupyterlab (>=4.3.4,<5.0.0)",
    "langchain-openai (>=0.3.2,<0.4.0)",
    "opik (>=1.4.8,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
